output
Darwin.c++: In constructor ‘World::World(int, int)’:
Darwin.c++:119:28: warning: ISO C++ forbids variable length array [-Wvla]
  darwin = new Creature[r][c];
                            ^
Darwin.c++:119:28: error: array size in operator new must be constant
Darwin.c++:119:28: error: ‘c’ is not a constant expression
